customer flow fixed

--- a/src/stylesheet/SingleProduct.scss
+++ b/src/stylesheet/SingleProduct.scss
@@ -30,7 +30,8 @@
 
 #single-product .big-image img {
   width: 100% !important;
-position: absolute;
+  // position: absolute;
+  object-fit: contain;
 // height: 100%;
 }
 
