--- a/src/stylesheet/Plans.css
+++ b/src/stylesheet/Plans.css
@@ -4,7 +4,7 @@
   /* padding: 10vh 10vw; */
   gap: 35px;
   background: #eee;
-  flex-wrap: wrap;
+  flex-direction: row;
   height: auto;
   /* min-height: 100dvh; */
   /* overflow-y: scroll; */
@@ -140,6 +140,7 @@
   margin-bottom: 16px;
   position: relative;
   top: 0;
+  gap: 15px;
 }
 
 .plan-name {
@@ -248,7 +249,6 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0vh 5vw;
   justify-content: space-between;
   min-height: 100dvh;
   gap: 2.5vw;
