--- a/src/stylesheet/Home.css
+++ b/src/stylesheet/Home.css
@@ -768,7 +768,7 @@ section {
   height: 37vh;
   border-radius: 7px;
   box-shadow: 0 0 12px 1px rgba(60, 43, 70, 0.107);
-  
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1612,12 +1612,14 @@ section {
 
   /* justify-content: ; */
 }
+@media (max-width: 600px) {
+}
 #feed-r .swiper {
   background-color: transparent !important;
 }
 
 .fd-cd {
-  overflow: hidden;
+  overflow: auto;
   box-shadow: 0 0 25px 0px rgba(128, 128, 128, 0.591) !important;
 }
 
@@ -1688,10 +1690,28 @@ section {
   flex-direction: column;
 }
 
+.mySwiper {
+  overflow: hidden;
+}
+
+.swip {
+  width: 3rem;
+}
+
 .feed-info #blue {
   /* margin-top: -60px !important; */
   /* position: relative; */
   /* top: 0 !important; */
+}
+
+#feed-r .swiper-wrapper > * {
+  width: 100%; /* Set to 100% on small devices */
+}
+
+@media (min-width: 600px) {
+  #feed-r .swiper-wrapper > * {
+    width: 30%; /* Set back to 30% on larger devices */
+  }
 }
 
 .sitara > * {
