--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -13,6 +13,11 @@
   background-position: center;
   margin-top: 5rem;
 }
+@media only screen and (max-width: 600px)  {
+  .slide{
+    height: 250px;
+  }
+}
 
 /* Arrows */
 .arrow {
