--- a/src/stylesheet/WhtLbl.css
+++ b/src/stylesheet/WhtLbl.css
@@ -57,6 +57,8 @@
     padding: 80px;
     border-radius: 15px;
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 .head00 img{
     top: -200px;
@@ -79,10 +81,11 @@
     padding: 10px;
     margin-top: 1rem;
     border-radius: 8px;
+    width: fit-content;
 }
 
 .ws-l .ws-title{
-    font-size: 4.5rem;
+    font-size: 4rem;
     font-family: var(--font6);
     ;text-transform: capitalize;
     font-weight: 400;
@@ -111,6 +114,7 @@
 @media only screen and (max-width: 600px) {
     .ws-l p{
         font-size: 1.1rem !important;
+        width: 100%;
     }
     .ws-l .ws-title{
         font-size: 3rem !important;
