--- a/src/stylesheet/Home.css
+++ b/src/stylesheet/Home.css
@@ -442,6 +442,8 @@ section {
 }
 .st-p {
   margin-bottom: 1rem;
+  font-size: 15px;
+  font-weight: 250;
 }
 .st-2 {
   margin-bottom: 2rem;
@@ -449,6 +451,7 @@ section {
 
 .s-txt {
   font-size: 0.8rem;
+  font-weight: 250;
 }
 
 .rm {
@@ -462,6 +465,7 @@ section {
   background: var(--blue);
   padding: 7px 22px;
   color: #000;
+  
   /* padding: 0 5px; */
 }
 
@@ -765,7 +769,7 @@ section {
   background: linear-gradient(to top, #e4f8ff, #effbff);
   /* background: var(--db); */
   padding: 25px;
-  height: 37vh;
+  height: 34vh;
   border-radius: 7px;
   box-shadow: 0 0 12px 1px rgba(60, 43, 70, 0.107);
   
@@ -794,6 +798,9 @@ section {
   background: linear-gradient(to top, #e4f8ff, #effbff);
   padding: 15px;
   border-radius: 12px;
+}
+.st-phone{
+  display: none;
 }
 .expl {
   color: #1e3eb1 !important;
@@ -829,17 +836,22 @@ section {
   text-transform: uppercase;
   color: rgb(51, 51, 77);
   width: 100%;
-  text-align: center !important;
+  text-align: center;
 }
 @media only screen and (max-width: 600px) {
-  .s-cd img {
-    width: 100% !important;
-    position: relative !important;
-    max-height: none !important;
-    max-width: none !important;
-  }
   .ps {
     max-width: 375px;
+  }
+  .rm{
+    margin-left: 12rem;
+  }
+  .st-phone{
+    display: block;
+    text-align: left;
+    width: 100%;
+    font-weight: 500;
+    font-size: 20px;
+    color: #191919;
   }
   .marquee2 {
     top: 6px !important;
@@ -847,17 +859,20 @@ section {
 
   #sdsc-ol {
     height: fit-content !important;
+    display: none;
   }
   .service-img {
     display: none;
   }
   .s-cd {
-    min-height: 300px !important;
-    width: 80% !important;
+    height: fit-content !important;
+    width: 46% !important;
     padding: 15px !important;
   }
   #steps .st {
     font-size: 1.2rem !important;
+    width: 100%;
+    text-align: left;
   }
   #steps .st-2 {
     font-size: 0.8rem !important;
